--- a/layouts/partials/article/article.html
+++ b/layouts/partials/article/article.html
@@ -8,4 +8,14 @@
     {{ if or .Params.math .Site.Params.article.math }}
         {{ partialCached "article/components/math.html" . }}
     {{ end }}
+
+    {{ if .Page.Store.Get "hasMermaid" }}
+        <script type="module">
+            import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.esm.min.mjs';
+            mermaid.initialize({
+                startOnLoad: true,
+                theme: document.documentElement.dataset.scheme
+            });
+        </script>
+    {{ end }}
 </article>
